# roundup

./: .gitignore  README.md  default.nix  roundup.cabal
app/: Main.hs
nix/: sources.json
src/: Roundup.hs
test/: Main.hs
