name:                roundup
synopsis:            Haskell slackbot to record historical count of weeds
version:             0.0.1.0
homepage:            https://github.com/shapr/roundup
license:             BSD3
author:              Shae Erisson
maintainer:          Shae Erisson
copyright:           Shae Erisson
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Roundup
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5

executable roundup
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , roundup

test-suite roundup-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , roundup
                  , hedgehog
